app/styles/style.scss
/* ... */
#loadingbar.down dd {
  opacity: .6;
  height: 20px;
  top: auto;
  bottom: 0;
  clip: rect(-6px,22px,20px,10px);
  margin: 0;
}

#loadingbar.down dd, #loadingbar.down dt {
  left: -5px;
  right: auto;
  width: 10px;
}

#loadingbar.up dt {
  opacity: .6;
  height: 180px;
  bottom: auto;
  top: -10px;
  clip: rect(13px,20px,190px,-6px);
}

#loadingbar.up dd {
  opacity: .6;
  height: 20px;
  bottom: auto;
  top: 0;
  clip: rect(-6px,22px,25px,10px);
  margin: 0;
}

#loadingbar.up dd, #loadingbar.up dt {
  left: -5px;
  right: auto;
  width: 10px;
}

@keyframes pulse {
  30% { opacity:0.6; }
  60% { opacity:0; }
  100% { opacity:0.6; }
}

@-moz-keyframes pulse 
{
  30% { opacity:0.6; }
  60% { opacity:0; }
  100% { opacity:0.6; }
}

@-ms-keyframes pulse 
{
  30% { opacity:0.6; }
  60% { opacity:0; }
  100% { opacity:0.6; }
}

@-webkit-keyframes pulse 
{
  30% { opacity:0.6; }
  60% { opacity:0; }
  100% { opacity:0.6; }
}
.btn-footer {
  display: inline-block;
  /* height: 36px; */
  /* margin-bottom: 15px; */
  padding: 0 2rem;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  background-clip: padding-box;
  background-color: transparent;
  color: #343434;
  /* line-height: 36px; */
  text-transform: uppercase;
  border: none;
  outline: 0;
  -webkit-tap-highlight-color: transparent;
}
/**
 * Headroom CSS
 */

.headroom {
    transition: transform 200ms linear;
}
.headroom--pinned {
    transition: translateY(0%);
}
.headroom--unpinned {
    transform: translateY(-100%);
}
#menu-main-navigation {
  color:grey;
}
#menu-main-navigation:hover {
  color:black;
}
.btn-floating.btn-large {
  width: 55px;
  height: 55px;
}
@media only screen and (min-width: 992px) {
  .logo {
    max-height: 50px;
    padding-top: 15px;
    padding-left: 35px;
  }
  .title-padding {
    padding: 0 10%;
  }
  .alt-padding {
    padding: 0 20%;
  }
}
@media only screen and (max-width: 480px) {
  .container {
    padding: 0 0.5rem;
  }
}
.waves-effect.waves-clear .waves-ripple {
  background-color: rgba(111, 111, 111, 0.07);
}
#sidenav-overlay {
  z-index: 998;
}
.waves-effect.close-arrow {
  display:inline-block;
}
.two-rem {
  font-size: 20px;
}
.site-search {
  padding: 0px 18px 0px 18px;
  /* box-shadow: 0 0 1px rgba(0,0,0,0.15); */
  border-radius: 40px;
}
.featured .full, .featured .half {
  background: center center no-repeat;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -ms-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  -o-box-sizing: border-box;
  box-sizing: border-box;
  position: relative;
  overflow: hidden;
  border-top: 1px solid #eee;
  border-right: 1px solid #eee;
}
.featured::after {
  background-color: #2f253d; 
  background-image: -webkit-gradient(linear,0 0,100% 100%,color-stop(5%,#2f253d),color-stop(30%,#5e02c9),color-stop(58%,#b300b6),color-stop(69%,#b300b6),color-stop(94%,#000)); 
  background-image: -webkit-linear-gradient(left top,#2f253d 5%,#5e02c9 30%,#b300b6 58%,#b300b6 69%,#000 94%);
  background-image: -moz-linear-gradient(left top,#2f253d 5%,#5e02c9 30%,#b300b6 58%,#b300b6 69%,#000 94%);
  background-image: -ms-linear-gradient(left top,#2f253d 5%,#5e02c9 30%,#b300b6 58%,#b300b6 69%,#000 94%);
  background-image: -o-linear-gradient(left top,#2f253d 5%,#5e02c9 30%,#b300b6 58%,#b300b6 69%,#000 94%);
  background-image: linear-gradient(left top,#2f253d 5%,#5e02c9 30%,#b300b6 58%,#b300b6 69%,#000 94%);
}
.featured::after {
  filter: alpha(opacity=50);
  opacity: 0.5;
}
.featured:after {
  content: ""!important;
  display: block!important;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  background-size: 100%;
}
.flow-text {
  font-weight: 200;
}
.fixed-action-btn {
  bottom: 64px;
}
.location {
  padding: 17px 0px 0px 20px;
}
.location a {
  padding: 16px 10px 20px 0px;
}
.clear-icon {
  background-color: rgba(255, 255, 255, 0)!important;
}
#mobile-hamburger {
  background: rgba(255, 255, 255, 0.97); 
}
i.mdi-navigation-menu {
  color:#383838;
  box-shadow: 0 0 1px rgba(0,0,0,.15);
}
i.mdi-navigation-menu:hover {
  color: #2bbbad;
  box-shadow: 0 0 1px rgba(0, 0, 0, 0.62);
}
a.my-social.waves-effect.waves-circle.waves-light.btn-floating.secondary-content {
    margin-left: 10px;
}
.footer-title {
  padding-left: 25px;
}
span.badge.category {
  font-weight: 300;
  font-size: .8rem;
  color: #fff;
  background-color: #26a69a;
  border-radius: 2px;
}
#disqus_thread {
  float: left;
  box-sizing: border-box;
  padding: 0 .75rem;
  width: 95%;
  margin-left: 10px;
  margin-bottom: 80px;
}
.article-link {
  cursor: pointer; 
  display: block; 
  overflow: hidden; 
  padding: 50px;
}
@media only screen and (max-width: 601px) {
  .article-link {
    padding: 10px;
  }
  .blog-item {
    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
  }
  #modal1 {
    width: 90%;
  }
  .badges.inverse.right{
    display:none;
  }
  .about-bg {
    margin-top:-100px;
  }
  h1 {
    line-height: 2.916rem;
  }
  .title-padding {
    padding: none;
  }
  .border-radius-image-mobile {
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;
  }
}
@media only screen and (max-width: 993px) {
  .modal .modal-content {
    padding: 17px 15px 0px 15px;
  }
}
@media only screen and (min-width: 601px) {
  #disqus_thread {
    width: 70%;
    margin-left: 25px;
  }
  .about-bg {
    margin-top:-100px;
  }
  .border-radius-right-image {
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
  }
  .alt-padding {
    padding: 0 10%;
  }
}
@media only screen and (min-width: 993px) {
  #disqus_thread {
    margin-left: 17.66667%;
    width: 63.66667%;
  }
}
@media only screen and (min-width:$small-screen) and (max-width: $large-screen) {
  .collection .footer-articles.collection-item.avatar {
    min-height: 155px;
  }
}
/* ... */

